add_executable(new_target bookstore-/cpp/diary.cpp
        bookstore-/cpp/user.cpp
        bookstore-/cpp/main.cpp
        bookstore-/cpp/book.cpp
        bookstore-/src/user.h
        bookstore-/src/diary.h
        bookstore-/src/book.h
        bookstore-/cpp/finance.cpp
        bookstore-/src/token.h
        bookstore-/cpp/token.cpp
)
